--- a/_posts/2019-07-11-test.md
+++ b/_posts/2019-07-11-test.md
@@ -2,6 +2,7 @@
 layout: post
 title: "Launches Site"
 date: 2019-07-11
+show: false
 ---
 
 Well. Finally got around to putting this old website together. Neat thing about it - powered by [Jekyll](http://jekyllrb.com) and I can use Markdown to author my posts. It actually is a lot easier than I thought it was going to be.
